Improving saving format, reworked on the Executor and dashboard to be able to support multiple instances of bots.